@@ -77,6 +77,8 @@ Apr ?? 2011 [Zenzizenzic]
       near-infinite history. Certain operations delete the history.
       [Ralph]
     * Attack maximum Extra Damage raised to 32767%
+    * You can customise the amount of experience given to heroes not
+      in the active party in the Battle System Options menu [Ralph]
 
   * Bugfixes
     * Bug 749: Attacks configured to do No Damage still do damage when
